--- a/services/authentication-chi/package.json
+++ b/services/authentication-chi/package.json
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "tslint": "^6.1.3"
   }
 }
