--- a/services/Threads/package.json
+++ b/services/Threads/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "start": "nodemon build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,11 @@
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
-    "tslint": "^6.1.3"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.3"
   }
 }
