thread connected to DB, update endpoint

--- a/services/Threads/.env
+++ b/services/Threads/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = postgres://kiggmsod:O1orsv_NWyO5bCGS1bkW6mnlGQnGBFNo@peanut.db.elephantsql.com/kiggmsod
+DATABASE_URL = mongodb+srv://497s-Project:j14B9Mu9DRywMD7a@497s.tzxscru.mongodb.net/?retryWrites=true&w=majority
