--- a/services/Threads/package.json
+++ b/services/Threads/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "build": "npx tsc",
-    "start": "nodemon build/index.js index.ts"
+    "start:ts": "tsc -w",
+    "start:js": "nodemon build/index.js",
+    "start": "concurrently npm:start:*"
   },
   "keywords": [],
   "author": "",
