--- a/services/Users/package.json
+++ b/services/Users/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^1.1.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^4.12.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   },
