--- a/services/Messages/package.json
+++ b/services/Messages/package.json
@@ -1,12 +1,23 @@
 {
-  "dependencies": {
-    "axios": "^1.1.3",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+  "name": "messages",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "nodemon index.js"
   },
-  "devDependencies": {
-    "tslint": "^6.1.3"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongodb": "^4.12.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
   }
 }
