dockerfile and coker-compose.yml

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mobiscroll/cli": "^1.7.3",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
-    "@mobiscroll/cli": "^1.7.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "mobiscroll": "^3.0.0-beta6",
     "react": "^18.2.0",
