--- a/services/Comments/package.json
+++ b/services/Comments/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "posts",
+  "name": "comments",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +12,25 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "dotenv": "^16.0.0",
-    "pg": "^8.7.3",
+    "pg": "^8.8.0",
     "postgres": "^3.1.0",
-    "psql": "^0.0.1"
+    "psql": "^0.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.11.10",
+    "@types/uuid": "^9.0.0",
+    "@types/pg": "^8.6.5",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.3"
   }
 }
