--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,8 +25,10 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
+    "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
