--- a/services/TrustDistinction/package.json
+++ b/services/TrustDistinction/package.json
@@ -1,37 +1,24 @@
 {
-  "name": "thread",
+  "name": "trust",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
-    "start:ts": "tsc -w",
-    "start:js": "nodemon build/index.js",
-    "start": "concurrently npm:start:*"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.3",
-    "concurrently": "^7.6.0",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongodb": "^4.12.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.11.10",
-    "@types/uuid": "^9.0.0",
-    "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.9.3"
+    "pg": "^8.7.3",
+    "postgres": "^3.1.0",
+    "psql": "^0.0.1"
   }
 }
