--- a/services/event-bus/package.json
+++ b/services/event-bus/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
