--- a/services/MockElection/package.json
+++ b/services/MockElection/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +13,14 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "dotenv": "^16.0.0",
     "pg": "^8.7.3",
     "postgres": "^3.1.0",
-    "psql": "^0.0.1"
+    "psql": "^0.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
