--- a/services/TrustDistinction/package.json
+++ b/services/TrustDistinction/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,8 @@
     "nodemon": "^2.0.20",
     "pg": "^8.7.3",
     "postgres": "^3.1.0",
-    "psql": "^0.0.1"
+    "psql": "^0.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
