--- a/services/TrustDistinction/package.json
+++ b/services/TrustDistinction/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
