Solved ts errors

--- a/services/MockElection/package.json
+++ b/services/MockElection/package.json
@@ -2,10 +2,9 @@
   "name": "posts",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
