--- a/services/Users/package.json
+++ b/services/Users/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "build": "npx tsc",
+    "start:ts": "tsc -w",
+    "start:js": "nodemon build/index.js",
+    "start": "concurrently npm:start:*"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +23,13 @@
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
-    "tslint": "^6.1.3"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.11.15",
+    "@types/uuid": "^9.0.0",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.4"
   }
 }
